--- a/css/base.css
+++ b/css/base.css
@@ -29,10 +29,843 @@
 html{
     height: 100%;
 }
+@font-face {
+    font-family: 'SF Pro Display';
+    font-style: normal;
+    font-weight: 400;
+    src: url('./../fonts/SFProDisplay-Regular.woff') format("woff");
+}
+@font-face {
+    font-family: 'SF Pro Display';
+    font-style: normal;
+    font-weight: bold;
+    src: url('./../fonts/SFProDisplay-Bold.woff') format("woff");
+}
+@import url('https://fonts.cdnfonts.com/css/space-age-cyrillic');
+
 body{
     display: flex;
     flex-direction: column;
+    width: 1920px;
     height: 100%;
+    font-family: 'SF Pr Display';
+    font-family: 'Space Age Cyrillic', sans-serif;
+    font-family: 'Roboto', sans-serif;
     padding: 0;
     margin: 0;
+}
+
+/* Header */
+.header {
+    position: absolute;
+    top: 92px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 241px;
+    width: 1075px;
+    height: 30px;
+    margin: 0 494px 0 360px;
+}
+.header__navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 30px;
+    width: 578px;
+}
+.header__navbar-link {
+    font-family: 'SF Pro Display';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 21px;
+    color: #FFFFFF;
+    transition: transform .2s ease-in;
+}
+.header__navbar-link:active {
+    transform: scale(.9);
+    color: #CB0E0E;
+    cursor: pointer;
+}
+.header__navbar-link:first-child {
+    color: #CB0E0E;
+}
+.header__number {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 247px;
+    font-family: 'SF Pro Display';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 29px;
+    color: #FFFFFF;
+    margin-right: 22px;
+}
+.header__icon {
+    width: 30px;
+    height: 30px;
+}
+
+/* Intro */
+.intro {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    background-image: url('../img/intro_bckg.svg');
+    background-repeat: no-repeat;
+}
+
+.intro__info {
+    display: flex;
+    flex-direction: column;
+    width: 600px;
+    height: 303px;
+    margin: 403px 960px 112px 360px;
+}
+.intro__title h2 {
+    font-family: 'Space Age Cyrillic';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 60px;
+    line-height: 60px;
+    color: #FFFFFF;
+}
+.intro__title h1 {
+    font-family: 'Space Age Cyrillic';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 110px;
+    line-height: 110px;
+    color: #FFFFFF;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.intro__moto {
+    display: flex;
+    justify-content: space-between;
+    gap: 42px;
+    margin-bottom: 49px;
+}
+.moto__phrase {
+    font-family: 'SF Pro Display';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 29px;
+    color: #FFFFFF;
+}
+
+.button.intro {
+    width: 600px;
+    height: 60px;
+    border: 1px solid #FFFFFF;
+    font-family: 'SF Pro Display';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 29px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    background: transparent;
+    padding: 15px 134px;
+    transition: transform .1s ease-in;
+}
+.button:active {
+    transform: scale(.95);
+    cursor: pointer;
+}
+
+.history {
+    display: flex;
+    justify-content: space-between;
+    gap: 52px;
+    width: 381px;
+    height: 140px;
+    margin: 0 360px 142px 1179px;
+}
+.history__paragraph {
+    display: flex;
+    flex: 1;
+    font-family: 'SF Pro Display';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: #FFFFFF;
+}
+
+/* About */
+.about {
+    display: flex;
+    flex-direction: column;
+    background-image: url('../img/about_bckg.png');
+    background-repeat: no-repeat;
+}
+
+.about__container {
+    display: flex;
+    flex-direction: column;
+    width: 1202px;
+    margin: 0 auto;
+}
+
+.title {
+    font-family: 'Space Age Cyrillic';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 48px;
+    color: #FFFFFF;
+    margin-bottom: 100px;
+}
+
+.container {
+    display: flex;
+    justify-content: space-between;
+    gap: 99px;
+    margin-bottom: 150px;
+}
+
+.container__photo {
+    width: 500px;
+}
+.container__photo .virgin-galactic {
+    height: 540px;
+}
+.container__photo .blue-origin {
+    height: 700px;
+}
+.container__photo .space-x {
+    height: 603px;
+}
+.container__info {
+    display: flex;
+    flex-direction: column;
+    width: 602px;
+    height: 546px;
+}
+.container__info-title {
+    font-family: 'SF Pro Display';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 36px;
+    color: #FFFFFF;
+    margin-bottom: 5px;
+}
+.container__info-subtitle {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
+    text-transform: uppercase;
+    color: #036CCA;
+    margin-bottom: 31px;
+}
+
+.history.virgin-galactic,
+.history.blue-origin,
+.history.space-x {
+    display: flex;
+    justify-content: space-between;
+    gap: 53px;
+    margin: 0;
+    width: 600px;
+    min-height: 190px;
+}
+.history__paragraph {
+    display: flex;
+    flex: 1;
+    font-family: 'SF Pro Display';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    color: #fff;
+}
+
+.calculation {
+    display: flex;
+    flex-direction: column;
+    max-width: 600px;
+    margin: 50px 0;
+}
+.border-top {
+    width: 600px;
+    height: 0px;
+    border: 1px solid #FFFFFF;
+}
+.border-bottom {
+    width: 600px;
+    height: 0px;
+    border: 1px solid #FFFFFF;
+}
+.calculation__items {
+    display: flex;
+    justify-content: space-between;
+    margin: 11px 0;
+}
+.calculation__item {
+    display: flex;
+    flex-direction: column;
+    font-family: 'SF Pro Display';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
+    color: #FFFFFF;
+}
+.calculation__values {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 33px;
+}
+.value {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1px;
+    margin-bottom: 7px;
+}
+.value-number {
+    font-family: 'SF Pro Display';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 43px;
+    color: #FFFFFF;
+}
+.value-unit {
+    font-family: 'SF Pro Display';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 17px;
+    color: #FFFFFF;
+}
+
+.comment {
+    font-family: 'SF Pro Display';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
+    color: #E5E5E5;
+    margin-top: 20px;
+}
+
+.button.virgin-galactic,
+.button.blue-origin,
+.button.space-x {
+    width: 300px;
+    height: 60px;
+    border: 1px solid #FFFFFF;
+    font-size: 18px;
+    line-height: 21px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    background: transparent;
+    padding: 20px 43px;
+    transition: transform .1s ease-in;
+}
+.button:active {
+    transform: scale(.95);
+    cursor: pointer;
+}
+
+/* Process */
+.process {
+    display: flex;
+    height: 999px;
+    background-image: url('../img/process_bckg.png');
+}
+.process__container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 1023px;
+    height: 799px;
+    margin: 100px 539px 100px 358px;
+}
+.process__title {
+    width: 578px;
+    font-family: 'Space Age Cyrillic';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 48px;
+    color: #FFFFFF;
+    margin-bottom: 100px;
+}
+.process_img {
+    width: 843px;
+    height: 603px;
+    margin-left: 180px;
+}
+
+/* Future */
+.future {
+    display: flex;
+    height: 914px;
+    background-image: url('../img/future_bckg.png');
+    background-repeat: no-repeat;
+}
+.future__container {
+    display: flex;
+    justify-content: space-between;
+    gap: 242px;
+    width: 1201px;
+    height: 173px;
+    margin: 100px auto 641px;
+}
+.future__title {
+    font-family: 'Space Age Cyrillic';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 48px;
+    color: #FFFFFF;
+}
+.history.future {
+    display: flex;
+    justify-content: space-between;
+    gap: 52px;
+    width: 383px;
+    height: 173px;
+    margin: 0;
+}
+.history__paragraph {
+    display: flex;
+    flex: 1;
+    font-family: 'SF Pro Display';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: #FFFFFF;
+}
+
+/* Marketing */
+.marketing {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    background-image: url('../img/marketing_bckg.png');
+    background-repeat: no-repeat;
+}
+
+.offer__container {
+    display: flex;
+    flex-direction: column;
+    width: 1200px;
+    margin: 100px auto 142px;
+}
+
+.offer__title {
+    width: 470px;
+    font-family: 'Space Age Cyrillic';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 48px;
+    color: #FFFFFF;
+    margin-bottom: 100px;
+}
+.options__img {
+    position: absolute;
+    right: 360px;
+    margin: 49px 0 160px;
+}
+.offer__items {
+    display: flex;
+    justify-content: space-between;
+    gap: 200px;
+    height: 485px;
+}
+.offer__item {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+    width: 500px;
+    height: 485px;
+}
+.offer__item-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 500px;
+    height: 400px;
+    border: 1px solid #FFFFFF;
+}
+.offer__item-text {
+    font-family: 'SF Pro Display';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 29px;
+    text-align: center;
+    color: #FFFFFF;
+    margin: 43px 133px 111px;
+}
+.offer__item-text span {
+    color: #cb0e0e;
+}
+.old-price {
+    width: 65px;
+    height: 20px;
+    margin: 0 75px 15px 360px;
+}
+.offer__item-price {
+    font-family: 'SF Pro Display';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 57px;
+    color: #FFFFFF;
+    margin-bottom: 38px;
+}
+.button.offer {
+    width: 500px;
+    height: 60px;
+    border: 1px solid #FFFFFF;
+    font-family: 'SF Pro Display';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 21px;
+    color: #FFFFFF;
+    padding: 20px 140px;
+    transition: transform .1s ease-in;
+}
+.button:active {
+    transform: scale(.95);
+    cursor: pointer;
+}
+/* options */
+.options__container {
+    display: flex;
+    flex-direction: column;
+    gap: 82px;
+    width: 1200px;
+    height: 376px;
+    margin: 0 auto 200px;
+}
+.options__title {
+    width: 600px;
+    font-family: 'Space Age Cyrillic';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 48px;
+    color: #FFFFFF;
+}
+.options__info {
+    display: flex;
+    justify-content: space-between;
+    gap: 83px;
+    width: 1200px;
+    height: 198px;
+}
+.options__wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+    width: 617px;
+    height: 183px;
+}
+.options__items-heading {
+    font-family: 'SF Pro Display';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 29px;
+    color: #FFFFFF;
+}
+.options__items {
+    display: flex;
+    flex-direction: column;
+    width: 550px;
+    height: 87px;
+}
+.options__item {
+    display: flex;
+    gap: 16px;
+}
+.options__item-icon {
+    width: 20px;
+    height: 20px;
+}
+.options__item-text {
+    font-family: 'SF Pro Display';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 29px;
+    color: #FFFFFF;
+}
+.comment.options {
+    font-family: 'SF Pro Display';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
+    color: #E5E5E5;
+    margin: 0;
+}
+
+.options__buttons {
+    display: flex;
+    flex-direction: column;
+    gap: 49px;
+}
+.button.options {
+    width: 500px;
+    height: 60px;
+    border: 1px solid #FFFFFF;
+    font-family: 'SF Pro Display';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 21px;
+    color: #FFFFFF;
+    padding: 20px 123px;
+    transition: transform .1s ease-in;
+}
+.button:active {
+    transform: scale(.95);
+    cursor: pointer;
+}
+/* slider */
+.slider__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 1200px;
+    height: 760px;
+    margin: 0 auto 100px;
+}
+.slider__wrapper {
+    display: flex;
+    margin-bottom: 50px;
+    border: 1px solid #fff;
+}
+.slider__box {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 30px;
+    width: 1060px;
+    height: 450px;
+    margin: 100px 70px;
+}
+.slider__arrow {
+    width: 100px;
+    left: 535px;
+    top: 7334px;
+    transform: matrix(-1, 0, 0, 1, 0, 0);
+    cursor: pointer;
+}
+.slider__photo {
+    width: 800px;
+    height: 450px;
+}
+.slider__law {
+    width: 1200px;
+    height: 60px;
+    font-family: 'Space Age Cyrillic';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 30px;
+    text-align: center;
+    color: #FFFFFF;
+}
+
+/* Contacts */
+.contacts {
+    display: flex;
+    flex-direction: column;
+    height: 810px;
+    background: #010203;
+}
+.contacts__wrapper {
+    display: flex;
+    flex-direction: column;
+    width: 1200px;
+    height: 610px;
+    margin: 100px 360px;
+}
+.contacts__container {
+    display: flex;
+    justify-content: space-between;
+    gap: 150px;
+    width: 1200px;
+    height: 210px;
+    margin-bottom: 46px;
+}
+.block.contacts {
+    display: flex;
+    flex-direction: column;
+    width: 450px;
+    height: 210px;
+    margin: 0;
+}
+.block.guarantee {
+    display: flex;
+    flex-direction: column;
+    width: 600px;
+    height: 210px;
+    margin: 0;
+}
+.title {
+    font-family: 'Space Age Cyrillic';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 48px;
+    color: #FFFFFF;
+    margin: 0;
+    margin-bottom: 46px;
+}
+.text {
+    font-family: 'SF Pro Display';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 29px;
+    color: #FFFFFF;
+    margin: 0;
+}
+.guarantee__block {
+    display: flex;
+    flex-direction: column;
+    width: 600px;
+}
+.contacts__form {
+    display: flex;
+    justify-content: space-between;
+    gap: 304px;
+    width: 1200px;
+    height: 400px;
+}
+.form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 55px;
+    width: 500px;
+    height: 354px;
+}
+.form__input {
+    width: 500px;
+    height: 39px;
+    background: transparent;
+    padding-bottom: 22px;
+    border-bottom: 1px solid #FFFFFF;
+    outline: none;
+    font-family: 'SF Pro Display';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 27px;
+    color: #FFFFFF;
+}
+.form__input::placeholder {
+    font-family: 'SF Pro Display';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: #FFFFFF;
+}
+.button.contacts {
+    width: 500px;
+    height: 60px;
+    border: 1px solid #FFFFFF;
+    font-family: 'SF Pro Display';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 21px;
+    color: #FFFFFF;
+    margin: 0;
+    padding: 0;
+    padding: 20px 123px;
+    transition: transform .1s ease-in;
+}
+.button:active {
+    transform: scale(.95);
+    cursor: pointer;
+}
+.contacts__photo {
+    width: 396px;
+    height: 396px;
+}
+
+/* Footer */
+.footer {
+    display: flex;
+    height: 433px;
+    background-image: url('../img/footer_bckg.png');
+    background-repeat: no-repeat;
+}
+.footer__container {
+    display: flex;
+    justify-content: space-between;
+    gap: 52px;
+    width: 600px;
+    height: 182px;
+    margin: 126px 360px 126px 960px;
+}
+.footer__block-schedule {
+    display: flex;
+    flex-direction: column;
+    gap: 48px;
+    width: 258px;
+}
+.block-schedule-paragraph {
+    width: 165px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    color: #fff;
+}
+.footer__navbar {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    width: 153px;
+}
+.footer__navbar-link {
+    width: 166px;
+    font-family: 'SF Pro Display';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    color: #FFFFFF;
+}
+.footer__contacts {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.footer__contacts-website {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+}
+.footer__number {
+    color: #CB0E0E;
 }
