--- a/css/base.css
+++ b/css/base.css
@@ -125,7 +125,7 @@ body{
     height: 303px;
     margin: 403px 960px 112px 360px;
 }
-.intro__title h2 {
+.intro__title h1 {
     font-family: 'Space Age Cyrillic';
     font-style: normal;
     font-weight: 400;
@@ -133,12 +133,12 @@ body{
     line-height: 60px;
     color: #FFFFFF;
 }
-.intro__title h1 {
+.intro__title h1 span {
     font-family: 'Space Age Cyrillic';
     font-style: normal;
     font-weight: 400;
     font-size: 110px;
-    line-height: 110px;
+    line-height: 80px;
     color: #FFFFFF;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
