--- a/css/base.css
+++ b/css/base.css
@@ -34,12 +34,14 @@ html{
     font-style: normal;
     font-weight: 400;
     src: url('./../fonts/SFProDisplay-Regular.woff') format("woff");
+    font-display: swap;
 }
 @font-face {
     font-family: 'SF Pro Display';
     font-style: normal;
     font-weight: bold;
     src: url('./../fonts/SFProDisplay-Bold.woff') format("woff");
+    font-display: swap;
 }
 @import url('https://fonts.cdnfonts.com/css/space-age-cyrillic');
 
@@ -231,6 +233,7 @@ body{
 
 .container__photo {
     width: 500px;
+    height: 540px;
 }
 .container__photo .virgin-galactic {
     height: 540px;
